v0.1.1
---

* Now using getopt in main.sh.
* Moved code to `bin` subfolder.

v0.1.0
===

Released on 20170313.