@@ -29,8 +29,8 @@ source $scriptdir/main.functions.sh
 
 # Help string
 helps="
-usage: ./main.sh [-h][-y][-t threads] -i inDir -o outDir -e expID -c conditions
- [-n neg][-a aligner][-g refGenome][-d bwaIndex][-x][-y][-f cutsite][-q mapqThr]
+usage: ./main.sh [-h][-w][-t threads] -i inDir -o outDir -e expID -c conditions
+ [-n][-a aligner][-g refGenome][-d bwaIndex][-x][-y][-f cutsite][-q mapqThr]
  [-p platform][-u umiLength][-r csRange][-j emax][-k eperc][-z binSize]
  [-b binStep][-l csList][-m maskFile][-s chrLengths]
 
@@ -51,7 +51,7 @@ usage: ./main.sh [-h][-y][-t threads] -i inDir -o outDir -e expID -c conditions
 
  Optional arguments:
   -h	Show this help page.
-  -y	Perform every step of the pipeline without asking.
+  -w	Perform every step of the pipeline without asking.
   -n	Negative present. Expected label: neg;
   -x	Remove X chromosome after alignment.
   -y	Remove Y chromosome after alignment.
@@ -92,14 +92,14 @@ emax=1e-3
 eperc=20
 
 # Parse options
-while getopts hyt:i:o:e:c:ng:a:d:xyf:q:p:u:r:z:b:j:k:l:m:s: opt; do
+while getopts hwt:i:o:e:c:ng:a:d:xyf:q:p:u:r:z:b:j:k:l:m:s: opt; do
 	case $opt in
 		h)
 			# Help
 			echo -e "$helps"
 			exit 0
 		;;
-		y)
+		w)
 			# Automatic
 			dontask=1
 		;;
@@ -334,6 +334,7 @@ if [ -n "$chrLengths" ]; then
 fi
 
 # Print settings
+clear
 echo -e "$settings"
 
 # Ask the user to double-check everything
@@ -346,6 +347,9 @@ in=$indir/indata && mkdir -p $in
 
 # Output folders
 out=$outdir/ && mkdir -p $out
+cout=$outdir/conditions && mkdir -p $cout
+pout=$outdir/plots && mkdir -p $pout
+xout=$outdir/aux && mkdir -p $xout
 
 # Additional outputs
 outcontrol=$outdir/tmp && mkdir -p $outcontrol
@@ -355,6 +359,7 @@ logpath="$out/log"
 {
 
 # Start
+clear
 echo -e "$settings
 START\n=====================\n"
 
@@ -376,7 +381,7 @@ rm filelist
 function quality_control() {
 	echo -e 'Quality control\n=====================\n'
 	# Produce quality control summarie(s)
-	time $scriptdir/quality_control.sh -t $threads -o $out -1 $r1 -2 $r2
+	time $scriptdir/quality_control.sh -t $threads -o $xout -1 $r1 -2 $r2
 }
 execute_step $dontask 'quality control' quality_control
 
@@ -402,32 +407,32 @@ function pattern_filtering() {
 	# Work on single conditions
 	patfiles="$indir/pat_files"
 	for condition in "${condv[@]}"; do
-		echo -e "\nWorking on condition '$condition'..."
+		echo -e "\n> Working on condition '$condition'..."
 
 		# Select pattern
 		pattern=`grep -P "$condition\t" $patfiles | cut -f 2`
 
 		# Save condition-specific patfile
-		patfile="$out/$condition/pat_file"
-		mkdir -p $out/$condition
+		patfile="$cout/$condition/pat_file"
+		mkdir -p $cout/$condition
 		echo "$pattern" > $patfile
 		echo -e "\nPattern: $pattern"
 
 		# Identify condition-specific reads
 		time $scriptdir/pattern_filter.sh -t $threads -i $in \
-			-o "$out"/$condition -p $patfile & pid0=$!
+			-o "$cout/$condition" -p $patfile & pid0=$!
 		wait $pid0
 
 		# Print condition-specific read count in the summary
-		count=`cat $out/"$condition"/filtered.r1.fa | paste - - | wc -l`
+		count=`cat $cout/"$condition"/filtered.r1.fa | paste - - | wc -l`
 
 		convstr="scale=4;perc=$count/$total_read_count;scale=2;(perc*100)/1"
 		echo $constr
 		perc=`echo $convstr | bc`
 
-		echo -e $header > $out/"$condition"/summary
+		echo -e $header > $cout/"$condition"/summary
 		header="$condition\t$pattern\t$total_read_count\t$count\t$perc%"
-		echo -e $header >> $out/"$condition"/summary
+		echo -e $header >> $cout/"$condition"/summary
 		echo -e $header >> $out/summary
 	done
 
@@ -448,30 +453,30 @@ function alignment() {
 
 		# Run trimmer ----------------------------------------------------------
 		$scriptdir/reads_trim.sh \
-			-t $threads -o $out -c "$condition" -p $patfiles
+			-t $threads -o $cout -c "$condition" -p $patfiles
 
 		# Run aligner ----------------------------------------------------------
 		if [ $numb_of_files -eq 2 ]; then
 			# Paired-end
-			$scriptdir/reads_align.sh -t $threads -o $out -c "$condition" \
-				-p -r $refGenome -a $aligner
+			$scriptdir/reads_align.sh -t $threads -o "$cout/$condition" \
+				-c "$condition" -p -r $refGenome -a $aligner
 		else
 			# Single-end
-			$scriptdir/reads_align.sh -t $threads -o $out -c "$condition" \
-				-r $refGenome -a $aligner
+			$scriptdir/reads_align.sh -t $threads -o "$cout/$condition" \
+				-c "$condition" -r $refGenome -a $aligner
 		fi
 
 		# Update summary -------------------------------------------------------
 		echo -e " · Retrieving flagstats ..."
-		samtools flagstat $out/"$condition"/"$condition".sorted.bam \
-			> $out/"$condition"/"$condition".bam_notes.txt
+		samtools flagstat $cout/"$condition"/"$condition".sorted.bam \
+			> $cout/"$condition"/"$condition".bam_notes.txt
 
-		perc=`cat $out/"$condition"/"$condition".bam_notes.txt | \
+		perc=`cat $cout/"$condition"/"$condition".bam_notes.txt | \
 			grep 'mapped' | head -n 1 | cut -d '(' -f 2 | cut -d ':' -f 1`
-		perc2=`cat $out/"$condition"/"$condition".bam_notes.txt | \
+		perc2=`cat $cout/"$condition"/"$condition".bam_notes.txt | \
 			grep 'properly paired' | head -n 1 | cut -d '(' -f 2 | \
 			cut -d ':' -f 1`
-		chim=`cat $out/"$condition"/"$condition".bam_notes.txt | \
+		chim=`cat $cout/"$condition"/"$condition".bam_notes.txt | \
 			grep 'with mate mapped to a different chr' | head -n 1 | \
 			cut -d ' ' -f 1`
 		row=`grep "$condition" "$out/summary"`
@@ -479,12 +484,12 @@ function alignment() {
 
 		# Add back the UMIs to the SAM file ------------------------------------
 		echo -e " · Adding linkers to SAM file ..."
-		grep -v "^\@" $out/"$condition"/"$condition".sam | tr -s ' ' | \
+		grep -v "^\@" $cout/"$condition"/"$condition".sam | tr -s ' ' | \
 			tr '\t' ' ' | sort --parallel=$threads \
 			--temporary-directory=$HOME/tmp -k1,1 | \
-			join - $out/"$condition"/filtered.r1.linkers.oneline.fq \
+			join - $cout/"$condition"/filtered.r1.linkers.oneline.fq \
 			-j 1 -o 0,1.2,1.3,1.4,1.5,1.6,1.7,1.8,1.9,2.2,1.10,2.3,1.11 \
-			> $out/"$condition"/"$condition".linkers.sam
+			> $cout/"$condition"/"$condition".linkers.sam
 	done
 
 	cp $out/summary $outcontrol/summary_pre_align
@@ -505,7 +510,7 @@ function filter_sam() {
 		echo -e "\nAnalyzing UMIs from condition '$condition'..."
 
 		# Filter SAM
-		time $scriptdir/sam_filter.R $out/$condition/ $expID $condition \
+		time $scriptdir/sam_filter.R $cout/$condition/ $expID $condition \
 			-mt $mapqThr -cs $cutsite -c $threads & pid0=$!
 		wait $pid0
 
@@ -536,18 +541,18 @@ function prepare_umi() {
 
 		# Group UMIs -----------------------------------------------------------
 		if [[ -n $maskFile ]]; then
-			$scriptdir/umi_group.py $out/$condition/ $expID $condition \
+			$scriptdir/umi_group.py $cout/$condition/ $expID $condition \
 				$umiLength --mask-file $maskFile & pid0=$!
 			wait $pid0
 		else
-			$scriptdir/umi_group.py $out/$condition/ $expID $condition \
+			$scriptdir/umi_group.py $cout/$condition/ $expID $condition \
 				$umiLength & pid0=$!
 			wait $pid0
 		fi
 
 		if [[ -n $csList ]]; then
 			# Assign UMIs to cutsites ------------------------------------------
-			$scriptdir/pos2cutsites.R $out/$condition/ $expID $condition \
+			$scriptdir/pos2cutsites.R $cout/$condition/ $expID $condition \
 				$csList -i $csRange -c $threads & pid0=$!
 			wait $pid0
 		fi
@@ -555,16 +560,17 @@ function prepare_umi() {
 		if [[ $umiLength -ne 0 ]]; then
 			# Deduplicating UMIs -----------------------------------------------
 			echo -e "\nDeduplicating UMIs ..."
-			$scriptdir/umi_dedupl.R $out/$condition/ $expID $condition \
+			$scriptdir/umi_dedupl.R $cout/$condition/ $expID $condition \
 				-p $platform -co $pthr -c $threads -cs $cslbool \
 				-em $emax -ep $eperc & pid0=$!
 			wait $pid0
 		else
 			if [[ -n $csList ]]; then
-				cp $out/$condition/UMIpos.atcs.txt \
-					$out/$condition/UMIpos.unique.atcs.txt
+				cp $cout/$condition/UMIpos.atcs.txt \
+					$cout/$condition/UMIpos.unique.atcs.txt
 			else
-				cp $out/$condition/UMIpos.txt $out/$condition/UMIpos.unique.txt
+				cp $cout/$condition/UMIpos.txt \
+					$cout/$condition/UMIpos.unique.txt
 			fi
 		fi
 	}
@@ -608,7 +614,7 @@ function bin_step() {
 	# Bin cutsites -------------------------------------------------------------
 	echo -e "\nBinning cutsites ..."
 	time $scriptdir/cs_bin.R -i $binSize -t $binStep -c $threads \
-		$out $csList $chrLengths & pid0=$!
+		$xout $csList $chrLengths & pid0=$!
 	wait $pid0
 
 	# Bin UMIs -----------------------------------------------------------------
