@@ -108,11 +108,6 @@ if [ -z "$condition" ]; then
 fi
 
 # Additional checks
-if [ ! -d "$out_dir/$condition/" ]; then
-	msg="Invalid -c option, folder not found.\nFolder: $out_dir/$condition/"
-	echo -e "$helps\n$msg"
-	exit 1
-fi
 if [ -z "$bwaIndex" ]; then
 	bwaIndex="$DATA"/BiCro-Resources/genomes/"$ref"bwt/"$ref".fa
 fi
@@ -124,19 +119,15 @@ if [[ 1 -eq $paired ]]; then
 	echo " · Performing paired-end alignment ..."
 	# BWA alignment
 	if [ -n "$aligner" -a "bwa" == "$aligner" ]; then
-		bwa mem -t $threads $bwaIndex \
-			$out_dir/"$condition"/filtered.r1.noLinker.fq \
-			$out_dir/"$condition"/filtered.r2.fq \
-			> $out_dir/"$condition"/"$condition".sam \
-			2> $out_dir/"$condition"/bwa.log
+		bwa mem -t $threads $bwaIndex $out_dir/filtered.r1.noLinker.fq \
+			$out_dir/filtered.r2.fq > $out_dir/"$condition".sam \
+			2> $out_dir/bwa.log
 
 	# Bowtie2 alignment
 	elif [ "bowtie2" == "$aligner" ]; then
-		bowtie2 -q -p $threads \
-			-1 $out_dir/"$condition"/filtered.r1.noLinker.fq \
-			-2 $out_dir/"$condition"/filtered.r2.fq \
-			-S $out_dir/"$condition"/"$condition".sam -x $ref \
-			2> $out_dir/"$condition"/bowtie2.log
+		bowtie2 -q -p $threads -1 $out_dir/filtered.r1.noLinker.fq \
+			-2 $out_dir/filtered.r2.fq -S $out_dir/"$condition".sam -x $ref \
+			2> $out_dir/bowtie2.log
 	else
 		echo -e "ERROR: unrecognized aligner."
 		exit 1
@@ -148,18 +139,14 @@ else
 
 	# BWA alignment
 	if [ -n "$aligner" -a "bwa" == "$aligner" ]; then
-		bwa mem -t $threads $bwaIndex \
-			$out_dir/"$condition"/filtered.r1.noLinker.fq \
-			> $out_dir/"$condition"/"$condition".sam \
-			2> $out_dir/"$condition"/bwa.log
+		bwa mem -t $threads $bwaIndex $out_dir/filtered.r1.noLinker.fq \
+			> $out_dir/"$condition".sam 2> $out_dir/bwa.log
 
 	# Bowtie2 alignment
 	elif [[ 'bowtie2' == "$aligner" ]]; then
 		
-		bowtie2 -q -p $threads \
-			-U $out_dir/"$condition"/filtered.r1.noLinker.fq \
-			-S $out_dir/"$condition"/"$condition".sam -x $ref \
-			2> $out_dir/"$condition"/bowtie2.log
+		bowtie2 -q -p $threads -U $out_dir/filtered.r1.noLinker.fq \
+			-S $out_dir/"$condition".sam -x $ref 2> $out_dir/bowtie2.log
 	else
 		echo -e "ERROR: unrecognized aligner."
 		exit 1
@@ -168,9 +155,9 @@ fi
 
 # Save log ---------------------------------------------------------------------
 if [ -n "$aligner" -o "bwa" == "$aligner" ]; then
-	cat $out_dir/"$condition"/bwa.log
+	cat $out_dir/bwa.log
 elif [[ 'bowtie2' == "$aligner" ]]; then
-	cat $out_dir/"$condition"/bowtie2.log
+	cat $out_dir/bowtie2.log
 else
 	echo -e "ERROR: unrecognized aligner."
 	exit 1
@@ -178,12 +165,11 @@ fi
 
 # Generate BAM -----------------------------------------------------------------
 echo -e " · Generating and sorting BAM file ..."
-samtools sort -@ $threads -o $out_dir/"$condition"/"$condition".sorted.bam \
-	$out_dir/"$condition"/"$condition".sam
+samtools sort -@ $threads -o $out_dir/"$condition".sorted.bam \
+	$out_dir/"$condition".sam
 
 echo -e " · Indexing BAM file ..."
-samtools index $out_dir/"$condition"/"$condition".sorted.bam \
-	$out_dir/"$condition"/"$condition".sorted.bai
+samtools index $out_dir/"$condition".sorted.bam $out_dir/"$condition".sorted.bai
 
 # END --------------------------------------------------------------------------
 
